# contract-compliance-agent

./: .env.example  .env.ollama  .gitignore  ARCHITECTURE.md  COMPLETION_CHECKLIST.md  Dockerfile  FINAL_PAPER_DRAFT.md  INTERIM_REPORT_DRAFT.md  INTERIM_REPORT_FULL_AGENTIC.md  PROJECT_CONTEXT.md  PROJECT_PROPOSAL.md  QUICKSTART.md  README.md  REFERENCES.md  SKILLS_REFERENCE.md  config.py  demo.py  example_usage.py  pyproject.toml  render.yaml  requirements.txt  run_demo.sh  setup_ollama.sh  stakeholder_dashboard.py
compliance_agent/: __init__.py  config.py  constants.py  main.py  runtime.py  scenarios.py
compliance_agent/agentic/: __init__.py  comparison.py  drafting.py  engine.py  evaluator.py  models.py  planner.py  router.py  store.py
compliance_agent/agents/: __init__.py  base.py  chat_agent.py  comparison_agent.py  compliance_agent.py  compliance_reasoner.py  confidence_scorer.py  drafting_agent.py  (+10 more)
evaluation/: __init__.py  baseline.py  metrics.py
tests/: conftest.py  test_agentic_compare_and_draft.py  test_agentic_engine.py  test_agentic_models.py  test_agentic_planner.py  test_agentic_router.py  test_chunking.py  test_comparison_agent.py  test_compliance_agent_agentic.py  test_demo_scenarios.py  test_document_parser.py  test_drafting_agent.py  test_e2e_agentic_system.py  test_evaluation.py  test_extraction_agent.py  test_intake_agent.py  test_live_smoke.py  test_llm_provider.py  test_orchestrator_agent.py  test_output_generators.py  test_persistent_store.py  test_pipeline.py  test_qa_agent.py  test_reasoning_confidence.py  test_retrieval_agent.py
(+138 files in other folders)
