[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "contract-compliance-agent"
version = "0.1.0"
description = "Prototype multi-agent contract and policy compliance checker"
requires-python = ">=3.9"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
markers = [
  "live: optional live LLM smoke tests that require external credentials",
]
